[gd_scene load_steps=2 format=3 uid="uid://blwxwx8etdu7b"]

[ext_resource type="Script" path="res://scenes/debug/image_viewer.gd" id="1_3mh14"]

[node name="image_viewer" type="PanelContainer"]
offset_right = 200.0
offset_bottom = 200.0
focus_mode = 1
script = ExtResource("1_3mh14")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2

[node name="OptionButton" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
focus_mode = 0

[node name="label_index" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "index"

[node name="slider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
expand_mode = 5
stretch_mode = 4

[connection signal="item_selected" from="VBoxContainer/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="drag_ended" from="VBoxContainer/slider" to="." method="_on_slider_drag_ended"]
[connection signal="value_changed" from="VBoxContainer/slider" to="." method="_on_slider_value_changed"]
